Detailed openapi annotations on authentication routes
