# Modules/User/Http/Controllers/Admin/AuthController.php
@@ -6,8 +6,8 @@ namespace Modules\User\Http\Controllers\Admin;
 
 use App\Http\Controllers\Controller;
 use Carbon\CarbonImmutable;
-use Exception;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Validation\ValidationException;
 use Modules\User\Http\Requests\LoginRequest;
@@ -26,12 +26,12 @@ final class AuthController extends Controller
      * @OA\Post(
      *     path="/admin/auth/login",
      *     tags={"Auth"},
-     *     summary="Frontend auth worker",
+     *     summary="Steteful login worker",
      *     @OA\RequestBody(
      *          required=true,
      *          @OA\MediaType(
      *              mediaType="application/json",
-     *              @OA\Schema (
+     *              @OA\Schema(
      *                  required={
      *                      "email",
      *                      "password"
@@ -44,8 +44,21 @@ final class AuthController extends Controller
      *          )
      *     ),
      *     @OA\Response(
-     *          response=200,
-     *          description="success"
+     *          response=204,
+     *          description="No content. The session ID is returned in a cookie named `laravel_session`. You need to include this cookie in subsequent requests.",
+     *          headers={
+     *              @OA\Header(
+     *                  header="Set-Cookie",
+     *                  @OA\Schema(
+     *                      type="string",
+     *                      example="laravel_session=eyJpdiI6IjZKZm...%3D; Path=/; Domain=localhost; HttpOnly; Expires=Fri, 18 Nov 2022 13:25:26 GMT;"
+     *                  )
+     *              )
+     *          }
+     *     ),
+     *     @OA\Response(
+     *          response=419,
+     *          description="CSRF token mismatch"
      *     ),
      *     @OA\Response(
      *          response=422,
@@ -55,12 +68,13 @@ final class AuthController extends Controller
      * )
      *
      * @param  LoginRequest  $request
+     * @return Response
      *
      * @throws ValidationException
-     * @throws Exception
+     * @throws \Exception
      * @noinspection NullPointerExceptionInspection
      */
-    public function login(LoginRequest $request): void
+    public function login(LoginRequest $request): Response
     {
         if (
             ! Auth::attempt([
@@ -81,17 +95,23 @@ final class AuthController extends Controller
 
         $request->session()->regenerate();
         $this->userStorage->update($user, ['last_login' => CarbonImmutable::now()]);
+
+        return response()->noContent();
     }
 
     /**
      * @OA\Post(
      *     path="/admin/auth/logout",
      *     tags={"Auth"},
-     *     security={ {"sanctum": {} }},
-     *     summary="User Logout",
+     *     security={ {"sanctum_frontend": {} }},
+     *     summary="Steteful logout worker",
      *     @OA\Response(
-     *          response=200,
-     *          description="success"
+     *          response=204,
+     *          description="No content"
+     *     ),
+     *     @OA\Response(
+     *          response=419,
+     *          description="CSRF token mismatch"
      *     ),
      *     @OA\Response(
      *          response=401,
@@ -100,19 +120,22 @@ final class AuthController extends Controller
      * )
      *
      * @param  Request  $request
+     * @return Response
      */
-    public function logout(Request $request): void
+    public function logout(Request $request): Response
     {
         Auth::logout();
         $request->session()->invalidate();
         $request->session()->regenerateToken();
+
+        return response()->noContent();
     }
 
     /**
      * @OA\Get(
      *     path="/admin/auth/user",
      *     tags={"Auth"},
-     *     security={ {"sanctum": {} }},
+     *     security={ {"sanctum_frontend": {} }},
      *     summary="Authorized worker data",
      *     @OA\Response(
      *          response=200,
