# Modules/User/Http/Controllers/TokenAuthController.php
@@ -7,11 +7,11 @@ namespace Modules\User\Http\Controllers;
 use App\Http\Controllers\Controller;
 use Carbon\CarbonImmutable;
 use Exception;
+use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException;
 use Modules\User\Http\Requests\LoginRequest;
-use Modules\User\Http\Resources\AuthUserResource;
 use Modules\User\Models\User;
 use Modules\User\Services\UserStorage;
 use OpenApi\Annotations as OA;
@@ -27,7 +27,7 @@ final class TokenAuthController extends Controller
      * @OA\Post(
      *     path="/admin/token-auth/login",
      *     tags={"Auth"},
-     *     summary="Get a token by creds",
+     *     summary="Stateless api login",
      *     @OA\RequestBody(
      *          required=true,
      *          @OA\MediaType(
@@ -47,7 +47,15 @@ final class TokenAuthController extends Controller
      *     @OA\Response(
      *          response=200,
      *          description="success",
-     *          @OA\JsonContent(ref="#/components/schemas/AuthUserResponse")
+     *          @OA\JsonContent(
+     *              type="object",
+     *              required={
+     *                  "token",
+     *                  "expired_at"
+     *              },
+     *              @OA\Property(property="token", type="string"),
+     *              @OA\Property(property="expired_at", type="string", format="date-time", example="2022-12-17 08:44:09")
+     *          )
      *     ),
      *     @OA\Response(
      *          response=422,
@@ -66,7 +74,7 @@ final class TokenAuthController extends Controller
     {
         $user = User::where('email', $request->validated('email'))->first();
 
-        if (!$user || !Hash::check($request->validated('password'), $user->password)) {
+        if (! $user || ! Hash::check($request->validated('password'), $user->password)) {
             throw ValidationException::withMessages([
                 'message' => ['The provided credentials are incorrect.'],
             ]);
@@ -78,16 +86,12 @@ final class TokenAuthController extends Controller
             ]);
         }
 
-        $expiredAt = CarbonImmutable::now()->add(
-            $request->validated('remember_me', false)
-                ? config('auth.api_token_prolonged_expires_in')
-                : config('auth.api_token_expires_in')
-        );
+        $expiredAt = CarbonImmutable::now()->add($request->validated('remember_me',
+            false) ? config('auth.api_token_prolonged_expires_in') : config('auth.api_token_expires_in'));
 
         $this->userStorage->update($user, ['last_login' => CarbonImmutable::now()]);
 
         return [
-            'user' => new AuthUserResource($user),
             'token' => $user->createToken('api', expiresAt: $expiredAt)->plainTextToken,
             'expired_at' => $expiredAt->toDateTimeString(),
         ];
@@ -98,19 +102,23 @@ final class TokenAuthController extends Controller
      *     path="/admin/token-auth/logout",
      *     tags={"Auth"},
      *     security={ {"sanctum": {} }},
-     *     summary="User api logout",
+     *     summary="Steteless api logout",
      *     @OA\Response(
-     *          response=200,
-     *          description="success"
+     *          response=204,
+     *          description="No content"
      *     ),
      *     @OA\Response(
      *          response=401,
      *          description="Unauthorized Error"
      *     )
      * )
+     *
+     * @return Response
      */
-    public function logout(): void
+    public function logout(): Response
     {
         Auth::user()->tokens()->where('name', 'api')->delete();
+
+        return response()->noContent();
     }
 }
