# Modules/User/Http/Controllers/TokenController.php
@@ -6,6 +6,7 @@ namespace Modules\User\Http\Controllers;
 
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Validation\ValidationException;
 use Modules\User\Services\UserStorage;
@@ -29,10 +30,10 @@ final class TokenController extends Controller
      *          @OA\MediaType(
      *              mediaType="application/json",
      *              @OA\Schema (
+     *                  type="object",
      *                  required={
      *                      "token_name",
      *                  },
-     *                  type="object",
      *                  @OA\Property(property="token_name", type="string")
      *              )
      *          )
@@ -41,18 +42,18 @@ final class TokenController extends Controller
      *          response=200,
      *          description="success",
      *          @OA\JsonContent(
-     *              @OA\Schema (
-     *                  required={
-     *                      "token",
-     *                  },
-     *                  type="object",
-     *                  @OA\Property(property="token", type="string")
-     *              )
+     *              type="object",
+     *              required={"token"},
+     *              @OA\Property(property="token", type="string")
      *          )
      *     ),
      *     @OA\Response(
      *          response=401,
      *          description="Unauthorized Error"
+     *     ),
+     *     @OA\Response(
+     *          response=419,
+     *          description="CSRF token mismatch"
      *     ),
      *     @OA\Response(
      *          response=422,
@@ -62,17 +63,19 @@ final class TokenController extends Controller
      * )
      *
      * @param  Request  $request
-     * @return array
+     * @return Response
      *
      * @throws ValidationException
      */
-    public function create(Request $request): array
+    public function create(Request $request)
     {
         $request->validate([
             'token_name' => 'required',
         ]);
 
-        return ['token' => $request->user()->createToken($request->token_name)->plainTextToken];
+        return response([
+            'token' => $request->user()->createToken($request->token_name)->plainTextToken,
+        ], Response::HTTP_CREATED);
     }
 
     /**
@@ -82,20 +85,29 @@ final class TokenController extends Controller
      *     security={ {"sanctum": {} }},
      *     summary="Delete token",
      *     @OA\Response(
-     *          response=200,
-     *          description="success"
+     *          response=204,
+     *          description="No content"
      *     ),
      *     @OA\Response(
      *          response=401,
      *          description="Unauthorized Error"
-     *     )
+     *     ),
+     *     @OA\Response(
+     *          response=419,
+     *          description="CSRF token mismatch"
+     *     ),
      * )
+     *
+     * @param  Request  $request
+     * @return Response
      */
-    public function delete(Request $request): void
+    public function delete(Request $request): Response
     {
         $request->validate([
             'token_name' => 'required',
         ]);
         Auth::user()->tokens()->where('name', $request->token_name)->delete();
+
+        return response()->noContent();
     }
 }
